# systemd-one-line

./: .gitignore  README.md  pyproject.toml
systemd_one_line/: main.py
