[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "systemd-one-line"
version = "0.1.0"
description = "Create systemd services and timers in one command"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
keywords = ["systemd", "service", "timer", "cron"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Systems Administration",
]
dependencies = []

[project.scripts]
systemd-one-line = "systemd_one_line.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["systemd_one_line*"]